Take more care with box/unboxing.